# PeriodicUnitFarField

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/: benchmark_host_device.cu
examples/: CMakeLists.txt
include/: CConv3D.h  FFT_Conv3D.h  SparseMatrix.h  puff.h  utils.h
include/details/: CConv3D.inl
tests/: test_host_device.cu
